deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-deploy
spec:
  selector:
    matchLabels:
      app: k8s-demo
  template:
    metadata:
      labels:
        app: k8s-demo
    spec:
      containers:
        - name: k8s-demo-container
          image: k8s-demo:v6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "1000m"
              memory: "1024Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"

          livenessProbe:
            httpGet:
              path: /hello
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /hello
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-svc
spec:
  selector:
    app: k8s-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
